# mason2

./: CMakeLists.txt  README
apps/: CMakeLists.txt
apps/mason2/: .#mason_tests.cpp  CMakeLists.txt  INFO  NOTES  README  README.mason_variator  TODO  example.tsv  external_split_merge.cpp  external_split_merge.h  fragment_generation.h  fstream_temp.h  genomic_variants.cpp  genomic_variants.h  individual_genome.h  mason_frag_sequencing.cpp  mason_fragments.cpp  mason_genome.cpp  mason_materializer.cpp  mason_methylation.cpp  mason_options.cpp  mason_options.h  mason_sequencing.cpp  mason_simulator.cpp  mason_splicing.cpp  mason_tests.cpp  mason_types.h  mason_variator.cpp  methylation_levels.cpp  methylation_levels.h  omp_wrapper.h  sequencing.h  simulate_454.cpp  simulate_base.cpp  simulate_genome.cpp  simulate_genome.h  simulate_illumina.cpp  simulate_sanger.cpp  variation_size_tsv.h  vcf_materialization.cpp  (+1 more)
apps/mason2/tests/: generate_outputs.sh  materializer.random_var1.fasta  materializer.random_var1.stderr  materializer.random_var1.stdout  methylation.test2.stderr  random_var1.fasta  random_var1.vcf  random_var1.vcf.stderr  random_var1_bp.txt  random_var1_meth.fasta  random_var2.fasta  random_var2.vcf  random_var2.vcf.stderr  random_var2_bp.txt  random_var2_meth.fasta  run_tests.py  simulator.left1.fq  simulator.left2.fq  simulator.left3.fa  simulator.left4.fa  simulator.left5.fq  simulator.left6.fq  simulator.left7.fa  simulator.out1.sam  simulator.out1.stderr  simulator.out2.sam  simulator.out2.stderr  simulator.out3.stderr  simulator.out4.sam  simulator.out4.stderr  simulator.out5.stderr  simulator.out6.stderr  simulator.out7.bam  simulator.out7.bam.bai  simulator.out7.sam  simulator.right1.fq  simulator.right2.fq  simulator.right3.fa  simulator.right5.fq  simulator.right6.fq
demos/: CMakeLists.txt
include/seqan/: vcf.h
include/seqan/vcf/: INFO  read_vcf.h  vcf_header.h  vcf_header_record.h  vcf_io_context.h  vcf_record.h  vcf_stream.h  write_vcf.h
tests/: CMakeLists.txt
tests/vcf/: CMakeLists.txt  test_vcf.cpp  test_vcf.h
